--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,54 +1,47 @@
 .sidebar {
     width: 300px;
     min-width: 300px;
-    background: var (--primary-color);
+    background: var(--primary-color);
     min-height: 100vh;
     box-sizing: border-box;
     position: relative;
     color: #fff;
-}
-
-.sidebar-content {
+  }
+  .sidebar-content {
     position: fixed;
     width: inherit;
-}
-
-.sidebar .user {
+  }
+  .sidebar .user {
     font-weight: bold;
     text-align: center;
     letter-spacing: 1px;
     padding: 40px 30px;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-}
-
-.sidebar .links {
+    border-bottom: 1px solid rgba(255,255,255,0.2);
+  }
+  .sidebar .links {
     margin-top: 80px;
     margin-left: 20px;
-}
-
-.sidebar .links li {
+  }
+  .sidebar .links li {
     margin-top: 10px;
-}
-
-.sidebar .links a {
+  }
+  .sidebar .links a {
     display: flex;
     padding: 10px;
     text-decoration: none;
     width: 100%;
     color: #fff;
-    box-sizing: border-box
-}
-
-.sidebar .links img {
+    box-sizing: border-box;
+  }
+  .sidebar .links img {
     margin-right: 10px;
-    filter: invert(100%)
-}
-.sidebar .links a.active {
+    filter: invert(100%);
+  }
+  .sidebar .links a.active {
     color: #555;
     background: var(--bg-color);
     border-radius: 20px 0 0 20px;
-}
-
-.sidebar .links .active img {
+  }
+  .sidebar .links .active img {
     filter: invert(40%);
-}
+  }
