--- a/src/pages/project/Project.css
+++ b/src/pages/project/Project.css
@@ -36,3 +36,14 @@
   .project-summary + .btn {
     margin-top: 20px;
   }
+
+  /* Project comments */
+
+  .project-comments label {
+    margin-bottom: 0px;
+  }
+
+.project-comments textarea {
+    min-height: 40px;
+    font-size: 1.5em;
+}
